--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="sell_title">Sell</string>
     <string name="sell_input_hint">Enter amount to sell</string>
     <string name="buy_title">Receive</string>
+    <string name="please_provide_valid_number">Please provide valid number</string>
 </resources>
